[flake8]
ignore =
    # module level import not at top of file
    E402
show_source = True
statistics = True
max_complexity = 15
max_line_length = 79
exclude =
    *.rst
    *.pyc
    *.pyo
    .git
    .tox
    .pytest_cache
    .coverage*
    .eggs
    *egg-info
    __pycache__
    build
    dist
    htmlcov

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[coverage:run]
branch = True
source =
    papas
    papas/apps
    tests
cover_pylib = False
concurrency = thread
data_file = .coverage
parallel = True

[coverage:report]
ignore_errors = True
sort = Cover

[coverage:html]
directory = htmlcov
title = Coverage report
