[flake8]
ignore =
    # module level import not at top of file
    E402
show_source = True
statistics = True
max_complexity = 15
max_line_length = 79
exclude =
    *.swp
    *.rst
    *.pyc
    *.pyo
    .git*
    .log
    .tox
    .pytest_cache
    .coverage*
    .eggs
    *egg-info
    __pycache__
    build
    dist
    htmlcov
    ref

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[coverage:run]
branch = True
source =
    papas
    tests
cover_pylib = False
concurrency = thread
data_file = .coverage
parallel = True

[coverage:report]
ignore_errors = True
sort = Cover

[coverage:html]
directory = htmlcov
title = Coverage report

[nosetests]
verbosity = 3
with-doctest = 1
detailed-errors = 1
debug = nose.loader
pdb = 1
pdb-failures = 1
